--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -36,6 +36,7 @@
                             <th>Emp Name</th>
                             <th>Domain</th>
                             <th>Login Time</th>
+                            <th>Timing</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -45,6 +46,7 @@
                             <td>{{ emp.name }}</td>
                             <td>{{ emp.domain }}</td>
                             <td>{{ emp.login_time }}</td>
+                            <td>{{ emp.timing }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
