--- a/templates/emp_details.html
+++ b/templates/emp_details.html
@@ -12,9 +12,9 @@
         <div class="sidebar">
             <ul>
                 <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/today-attendance">Today's Attendance</a></li>
-                <li><a href="/employees_list">Employees List</a></li>
-                <li><a href="/scheduling_meeting">Scheduling Meeting</a></li>
+                <li><a href="/attendance">Today's Attendance</a></li>
+                <li><a href="/emp-list">Employees List</a></li>
+                <li><a href="/schedule">Schedule Meet</a></li>
             </ul>
             <button class="logout">Logout</button>
         </div>
