--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -14,14 +14,14 @@
 
         <!-- Main Content -->
         <div class="main-content">
-            <h1>Present Today</h1>
+            <h1>Present Count Today</h1>
 
             <!-- Gauge Chart Section -->
             <div class="top-section">
-                <div class="gauge-chart" style="width: 300px; height: 300px; margin: auto;">
+                <div class="gauge-chart" style="width: 450px; height: 450px; margin-top: 50px; margin-left:50px ; margin-bottom: -120px;">
                     <canvas id="attendanceGauge"></canvas>
                 </div>
-                <div id="attendanceText" style="text-align: center; font-size: 1.2rem; margin-top: 10px;">
+                <div id="attendanceText" style="text-align: center; font-size: 1.9rem; margin-top: 150px; margin-right: 180px;">
                     Fetching attendance data...
                 </div>
             </div>
