--- a/templates/emp_details.html
+++ b/templates/emp_details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Details</title>
-    <link rel="stylesheet" href="/static/emp_styles.css">
+    <link rel="stylesheet" href="/static/emp_details.css">
 </head>
 <body>
     <div class="container">
@@ -26,51 +26,99 @@
                 <!-- Personnel Information -->
                 <div class="section">
                     <h3>Personnel Information</h3>
-                    <label>Employee ID: </label>
-                    <input type="text" name="emp_id" value="{{ employee.employee_id }}" readonly><br>
-                    <label>Name: </label>
-                    <input type="text" name="name" value="{{ employee.name }}" disabled><br>
-                    <label>Date of Birth: </label>
-                    <input type="date" name="dob" value="{{ employee.dob }}" disabled><br>
-                    <label>Gender: </label>
-                    <input type="text" name="gender" value="{{ employee.gender }}" disabled><br>
-                    <label>Mobile Number: </label>
-                    <input type="text" name="mobile" value="{{ employee.mobile }}" disabled><br>
-                    <label>Email Address: </label>
-                    <input type="email" name="email" value="{{ employee.email }}" disabled><br>
-                    <label>Emergency Contact Number: </label>
-                    <input type="text" name="emergency_contact" value="{{ employee.emergency_contact }}" disabled><br>
-                    <label>Current Address: </label>
-                    <textarea name="current_address" disabled>{{ employee.current_address }}</textarea><br>
-                    <label>Permanent Address: </label>
-                    <textarea name="permanent_address" disabled>{{ employee.permanent_address }}</textarea><br>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Employee ID: </label>
+                            <input type="text" name="emp_id" value="{{ employee.employee_id }}" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label>Name: </label>
+                            <input type="text" name="name" value="{{ employee.name }}" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Date of Birth: </label>
+                            <input type="date" name="dob" value="{{ employee.dob }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>Gender: </label>
+                            <input type="text" name="gender" value="{{ employee.gender }}" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Mobile Number: </label>
+                            <input type="text" name="mobile" value="{{ employee.mobile }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>Email Address: </label>
+                            <input type="email" name="email" value="{{ employee.email }}" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Emergency Contact Number: </label>
+                            <input type="text" name="emergency_contact" value="{{ employee.emergency_contact }}" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Current Address: </label>
+                            <textarea name="current_address" disabled>{{ employee.current_address }}</textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Permanent Address: </label>
+                            <textarea name="permanent_address" disabled>{{ employee.permanent_address }}</textarea>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Professional Information -->
                 <div class="section">
                     <h3>Professional Information</h3>
-                    <label>Designation: </label>
-                    <input type="text" name="designation" value="{{ employee.designation }}" disabled><br>
-                    <label>Department: </label>
-                    <input type="text" name="department" value="{{ employee.department }}" disabled><br>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Designation: </label>
+                            <input type="text" name="designation" value="{{ employee.designation }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>Department: </label>
+                            <input type="text" name="department" value="{{ employee.department }}" disabled>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Administrative Information -->
                 <div class="section">
                     <h3>Administrative Information</h3>
-                    <label>Account Number: </label>
-                    <input type="text" name="account_number" value="{{ employee.account_number }}" disabled><br>
-                    <label>Bank Name: </label>
-                    <input type="text" name="bank_name" value="{{ employee.bank_name }}" disabled><br>
-                    <label>IFSC Code: </label>
-                    <input type="text" name="ifsc_code" value="{{ employee.ifsc_code }}" disabled><br>
-                    <label>PAN Number: </label>
-                    <input type="text" name="pan_number" value="{{ employee.pan_number }}" disabled><br>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Account Number: </label>
+                            <input type="text" name="account_number" value="{{ employee.account_number }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>Bank Name: </label>
+                            <input type="text" name="bank_name" value="{{ employee.bank_name }}" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>IFSC Code: </label>
+                            <input type="text" name="ifsc_code" value="{{ employee.ifsc_code }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>PAN Number: </label>
+                            <input type="text" name="pan_number" value="{{ employee.pan_number }}" disabled>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Buttons -->
-                <button type="button" id="editButton">Edit</button>
-                <button type="submit" id="updateButton" disabled>Update</button>
+                <div class="button-group">
+                    <button type="button" id="editButton">Edit</button>
+                    <button type="submit" id="updateButton" disabled>Update</button>
+                </div>
             </form>
         </div>
     </div>
@@ -89,3 +137,4 @@
     </script>
 </body>
 </html>
+
