--- a/templates/emp_list.html
+++ b/templates/emp_list.html
@@ -97,6 +97,11 @@
                 </ul>
             </div>
         </div>
+        <div class="button-container">
+            <button id="button1" onclick="window.location.href='{{ url_for('leave_form') }}'">Apply Leave</button>
+            <button id="button2" onclick="window.location.href='{{ url_for('register') }}'">Add Employee</button>
+            <button id="button3" onclick="window.location.href='{{ url_for('permission_form') }}'">Apply Permision</button>
+        </div>
     </div>
 
     <!-- Modal -->
